--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,51 @@
 	<meta name="description" content="Shelly - Website" />
 	<meta name="author" content="merkulove">
 	<meta name="keywords" content="" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css" />
+	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css') }}"> -->
+
+	<style>
+		#fa {
+		background-color: rgb(255, 255, 250);
+		animation-name: example;
+		animation-duration: 8s;
+		border-radius: 10%;
+		padding: 0.50rem;
+	  }
+	
+	  @keyframes example {
+		from {background-color: rgb(197, 178, 178); color: rgb(82, 4, 155);}
+		to {background-color: rgb(255, 253, 225);}
+	  }
+	  a:hover{
+		background-color: rgb(185, 212, 224);
+	  }
+	  li{
+		color: black;
+		margin-left: 5%;
+	  }
+	
+	  ul{
+		margin-left: 10%;
+	  }
+	  .btn{
+		margin-left: 5%;
+	  }
+	  .navbar{
+		width: 100%;
+		padding: 10px;
+	  }
+	  @media screen and (max-width: 400px){
+		i{display: block; text-align: left;}
+	  }
+		
+	  </style>
 </head>
 
 <body>
@@ -20,72 +59,32 @@
 	<div class="wrapper">
 		<div class="main-section">
 
-			<header>
-				<div class="container">
-					<div class="header-content d-flex flex-wrap align-items-center">
-						<div class="logo">
-							<a href="index.html" title="">
-								<img src="{{ url_for('static', filename='img/logo.png') }}" alt="" srcset="assets/img/01_Logo_2x.png 2x">
-							</a>
-						</div><!--logo end-->
-						<ul class="contact-add d-flex flex-wrap">
-							<li>
-								<div class="contact-info">
-									<img src="{{ url_for('static', filename='img/icon1.png') }}" alt="">
-									<div class="contact-tt">
-										<h4>Call</h4>
-										<span>07069739876</span>
-										<span>08168916830</span>
-									</div>
-								</div><!--contact-info end-->
-							</li>
-							<li>
-								<div class="contact-info">
-									<img src="{{ url_for('static', filename='img/icon2.png') }}" alt="">
-									<div class="contact-tt">
-										<h4>Work Time</h4>
-										<span>Mon - Fri 8 AM - 5 PM</span>
-									</div>
-								</div><!--contact-info end-->
-							</li>
-							<li>
-								<div class="contact-info">
-									<img src="{{ url_for('static', filename='img/icon3.png') }}" alt="">
-									<div class="contact-tt">
-										<h4>Address</h4>
-										<span>P. O. Box 25 Gero road behind jos-south local government secretarial</span>
-									</div>
-								</div><!--contact-info end-->
-							</li>
-						</ul><!--contact-information end-->
-						<div class="menu-btn">
-							<a href="#">
-								<span class="bar1"></span>
-								<span class="bar2"></span>
-								<span class="bar3"></span>
-							</a>
-						</div>
-                        <!--menu-btn end-->
-
-					</div><!--header-content end-->
-					<div class="navigation-bar d-flex flex-wrap align-items-center">
-						<nav>
-							<ul>
-								<li><a class="active" href="{{ url_for('home') }}" title="">Home</a></li>
-								<li><a href="{{ url_for('about') }}" title="">About</a></li>
-								<li><a href="{{ url_for('contact') }}" title="">Contacts</a></li>
-							</ul>
-						</nav><!--nav end-->
-						<ul class="social-links ml-auto">
-							<li><a href="#" title=""><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#" title=""><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="#" title=""><i class="fab fa-instagram"></i></a></li>
-						</ul>
-					</div><!--navigation-bar end-->
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<div class="container-fluid">
+				  <a class="navbar-brand" href="#">Navbar</a>
+				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				  </button>
+				  <div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+					  <li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+					  </li>
+					</ul>
+				  </div>
 				</div>
-			</header><!--header end-->
+			  </nav>
 
-			<div class="responsive-menu">
+			<!-- <div class="responsive-menu">
 				<ul>
 					<li><a href="index.html" title="">Home</a></li>
 					<li><a href="about.html" title="">About</a></li>
@@ -93,7 +92,8 @@
 					<li><a href="event-single.html" title="">Event Single</a></li>
 					
 				</ul>
-			</div><!--responsive-menu end-->
+			</div> -->
+			<!--responsive-menu end-->
 
 			<section class="main-banner">
 				<div class="container">
@@ -570,7 +570,9 @@
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 <script src="{{ url_for('static', filename='js/wow.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/froogaloop2.min.js') }}"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 
 </html>
